--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>나다움 프로젝트🌳</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <style>
     @font-face {
       font-family: 'Paperlogy';
@@ -60,16 +61,21 @@
       cursor: pointer;
       text-align: center;
     }
-    .card-slide img {
-      max-width: 100%;
+    .swiper {
+      width: 100%;
+      max-width: 500px;
       height: auto;
-      border-radius: 8px;
       margin-bottom: 1rem;
+    }
+    .swiper-slide img {
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
     }
     .iframe-container {
       width: 100%;
       max-width: 100%;
-      height: 600px;
+      height: 500px;
       margin-bottom: 1rem;
     }
     iframe {
@@ -95,56 +101,97 @@
     </div>
   </div>
 
-  <!-- 슬라이드 화면 (공통 템플릿) -->
-  <div class="screen card-slide" id="slide1">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 1.png" alt="슬라이드 이미지 1">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 2.png" alt="슬라이드 이미지 2">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 3.png" alt="슬라이드 이미지 3">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 4.png" alt="슬라이드 이미지 4">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 5.png" alt="슬라이드 이미지 5">
-    <div class="iframe-container">
-      <iframe src="https://noteforms.com/forms/1-x6enh2" title="의견 남기기"></iframe>
+  <!-- 슬라이드 화면 -->
+  <div class="screen" id="slide1">
+    <div class="swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 1.png"></div>
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 2.png"></div>
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 3.png"></div>
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 4.png"></div>
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 5.png"></div>
+      </div>
+      <div class="swiper-pagination"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
     </div>
-    <button class="btn back-btn" onclick="goHome()">← 다른 카드뉴스 보기</button>
-  </div>
-  <div class="screen card-slide" id="slide2">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 1.png" alt="슬라이드 이미지 1">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 2.png" alt="슬라이드 이미지 2">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 3.png" alt="슬라이드 이미지 3">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 4.png" alt="슬라이드 이미지 4">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 5.png" alt="슬라이드 이미지 5">
-    <div class="iframe-container">
-      <iframe src="https://noteforms.com/forms/1-x6enh2" title="의견 남기기"></iframe>
-    </div>
-    <button class="btn back-btn" onclick="goHome()">← 다른 카드뉴스 보기</button>
-  </div>
-  <div class="screen card-slide" id="slide3">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 1.png" alt="슬라이드 이미지 1">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 2.png" alt="슬라이드 이미지 2">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 3.png" alt="슬라이드 이미지 3">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 4.png" alt="슬라이드 이미지 4">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 5.png" alt="슬라이드 이미지 5">
-    <div class="iframe-container">
-      <iframe src="https://noteforms.com/forms/1-x6enh2" title="의견 남기기"></iframe>
-    </div>
-    <button class="btn back-btn" onclick="goHome()">← 다른 카드뉴스 보기</button>
-  </div>
-  <div class="screen card-slide" id="slide4">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 1.png" alt="슬라이드 이미지 1">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 2.png" alt="슬라이드 이미지 2">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 3.png" alt="슬라이드 이미지 3">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 4.png" alt="슬라이드 이미지 4">
-    <img src="내 삶의 지혜를 나누는 콘텐츠 5.png" alt="슬라이드 이미지 5">
     <div class="iframe-container">
       <iframe src="https://noteforms.com/forms/1-x6enh2" title="의견 남기기"></iframe>
     </div>
     <button class="btn back-btn" onclick="goHome()">← 다른 카드뉴스 보기</button>
   </div>
 
+  <!-- 동일한 구성 slide2~slide4 (복제본) -->
+  <div class="screen" id="slide2">
+    <div class="swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 1.png"></div>
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 2.png"></div>
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 3.png"></div>
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 4.png"></div>
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 5.png"></div>
+      </div>
+      <div class="swiper-pagination"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+    </div>
+    <div class="iframe-container">
+      <iframe src="https://noteforms.com/forms/1-x6enh2" title="의견 남기기"></iframe>
+    </div>
+    <button class="btn back-btn" onclick="goHome()">← 다른 카드뉴스 보기</button>
+  </div>
+
+  <div class="screen" id="slide3">
+    <div class="swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 1.png"></div>
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 2.png"></div>
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 3.png"></div>
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 4.png"></div>
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 5.png"></div>
+      </div>
+      <div class="swiper-pagination"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+    </div>
+    <div class="iframe-container">
+      <iframe src="https://noteforms.com/forms/1-x6enh2" title="의견 남기기"></iframe>
+    </div>
+    <button class="btn back-btn" onclick="goHome()">← 다른 카드뉴스 보기</button>
+  </div>
+
+  <div class="screen" id="slide4">
+    <div class="swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 1.png"></div>
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 2.png"></div>
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 3.png"></div>
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 4.png"></div>
+        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 5.png"></div>
+      </div>
+      <div class="swiper-pagination"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+    </div>
+    <div class="iframe-container">
+      <iframe src="https://noteforms.com/forms/1-x6enh2" title="의견 남기기"></iframe>
+    </div>
+    <button class="btn back-btn" onclick="goHome()">← 다른 카드뉴스 보기</button>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
     function showSlide(index) {
       document.querySelectorAll('.screen').forEach(s => s.classList.remove('active'));
       document.getElementById(`slide${index}`).classList.add('active');
+      new Swiper(`#slide${index} .swiper`, {
+        loop: true,
+        pagination: { el: '.swiper-pagination' },
+        navigation: {
+          nextEl: '.swiper-button-next',
+          prevEl: '.swiper-button-prev'
+        },
+      });
     }
     function goHome() {
       document.querySelectorAll('.screen').forEach(s => s.classList.remove('active'));
