--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       display: flex;
     }
     .home {
-      background-image: url('메인 배경.jpg');
+      background-image: url('메인 배경.png');
       background-size: cover;
       background-position: center;
       height: 100vh;
@@ -34,33 +34,42 @@
     }
     .overlay {
       background-color: rgba(255, 255, 255, 0.9);
-      margin-top: 20%;
+      margin-top: 10%;
       padding: 1.5rem;
       border-radius: 12px;
       text-align: center;
       width: 90%;
     }
-    h1 {
-      font-size: 1.8rem;
+    h1, h2, h3 {
+      font-family: 'Paperlogy', sans-serif;
       margin: 0.5rem 0;
     }
+    .intro-text {
+      font-size: 0.9rem;
+      line-height: 1.4;
+    }
+    h1 {
+      font-size: 1.6rem;
+    }
     h2 {
-      font-size: 1rem;
+      font-size: 1.2rem;
       font-weight: normal;
-      margin: 0 0 1.5rem;
+      margin-bottom: 1.5rem;
     }
     .btn {
       display: block;
       width: 100%;
-      margin: 1rem 0;
+      margin: 1.2rem 0;
       padding: 1.2rem;
       font-size: 1rem;
-      background-color: #f3f3f3;
+      background-color: #e6f4ea;
       border: none;
       border-radius: 8px;
       cursor: pointer;
       text-align: center;
       font-family: 'Paperlogy', sans-serif;
+      line-height: 1.4;
+      white-space: pre-line;
     }
     .swiper {
       width: 100%;
@@ -77,10 +86,13 @@
     .swiper-button-prev {
       display: none;
     }
+    .swiper-pagination-bullet-active {
+      background-color: #4CAF50 !important;
+    }
     .iframe-container {
       width: 100%;
       max-width: 100%;
-      height: 500px;
+      height: 480px;
       margin-bottom: 1rem;
     }
     iframe {
@@ -90,87 +102,103 @@
     }
     .back-btn {
       margin-top: 1rem;
-      background-color: #dbeafe;
+      background-color: #d7f0d7;
       font-family: 'Paperlogy', sans-serif;
+    }
+    .slide-title {
+      font-size: 1.3rem;
+      margin-bottom: 1rem;
+      font-family: 'Paperlogy', sans-serif;
+      text-align: center;
     }
   </style>
 </head>
 <body>
   <div class="screen home active" id="home">
     <div class="overlay">
+      <div class="intro-text">
+        울산 동구청 장애인 평생교육 활성화 지원사업<br>
+        울산광역시동구장애인복지관 '나다움 프로젝트' 자조 모임
+      </div>
       <h1>나다움 프로젝트🌳</h1>
       <h2>내 삶의 지혜를 나누는 카드 뉴스</h2>
-      <button class="btn" onclick="showSlide(1)">나의 지혜는 어떤 이름일까? 1</button>
-      <button class="btn" onclick="showSlide(2)">나의 지혜는 어떤 이름일까? 2</button>
-      <button class="btn" onclick="showSlide(3)">나의 지혜는 어떤 이름일까? 3</button>
-      <button class="btn" onclick="showSlide(4)">나의 지혜는 어떤 이름일까? 4</button>
+      <button class="btn" onclick="showSlide(1)">손주와 그림책 읽을 때 실감나게 읽는 법\n박경화</button>
+      <button class="btn" onclick="showSlide(2)">“첫 도전은 혼자였지만, 다음 비행은\n당신과 함께하고 싶습니다”\n설병화</button>
+      <button class="btn" onclick="showSlide(3)">볼링장 신발 사이즈 제대로 고르는 법\n박춘광</button>
+      <button class="btn" onclick="showSlide(4)">몸에 좋은 계란을 잘 고르고 잘 사는 방법\n황금성</button>
     </div>
   </div>
 
-  <!-- 슬라이드 화면들 -->
   <div class="screen" id="slide1">
+    <div class="slide-title">손주와 그림책 읽을 때 실감나게 읽는 법</div>
     <div class="swiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 1.png"></div>
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 2.png"></div>
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 3.png"></div>
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 4.png"></div>
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 5.png"></div>
+        <div class="swiper-slide"><img src="그림책 1.png"></div>
+        <div class="swiper-slide"><img src="그림책 2.png"></div>
+        <div class="swiper-slide"><img src="그림책 3.png"></div>
+        <div class="swiper-slide"><img src="그림책 4.png"></div>
+        <div class="swiper-slide"><img src="그림책 5.png"></div>
       </div>
       <div class="swiper-pagination"></div>
     </div>
     <div class="iframe-container">
-      <iframe src="https://noteforms.com/forms/1-x6enh2" title="의견 남기기"></iframe>
+      <iframe src="https://walla.my/v/c0NRYR2g8x3izjAAZCbr" title="설문"></iframe>
     </div>
-    <button class="btn back-btn" onclick="goHome()">← 다른 카드뉴스 보기</button>
+    <button class="btn back-btn" onclick="goHome()">다른 카드 뉴스 더 보기🔍</button>
   </div>
+
   <div class="screen" id="slide2">
+    <div class="slide-title">“첫 도전은 혼자였지만, 다음 비행은 당신과 함께하고 싶습니다”</div>
     <div class="swiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 1.png"></div>
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 2.png"></div>
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 3.png"></div>
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 4.png"></div>
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 5.png"></div>
+        <div class="swiper-slide"><img src="비행 1.png"></div>
+        <div class="swiper-slide"><img src="비행 2.png"></div>
+        <div class="swiper-slide"><img src="비행 3.png"></div>
+        <div class="swiper-slide"><img src="비행 4.png"></div>
+        <div class="swiper-slide"><img src="비행 5.png"></div>
       </div>
       <div class="swiper-pagination"></div>
     </div>
     <div class="iframe-container">
-      <iframe src="https://noteforms.com/forms/1-x6enh2" title="의견 남기기"></iframe>
+      <iframe src="https://walla.my/v/KVsEbmTfbodl0koNX59K" title="설문"></iframe>
     </div>
-    <button class="btn back-btn" onclick="goHome()">← 다른 카드뉴스 보기</button>
+    <button class="btn back-btn" onclick="goHome()">다른 카드 뉴스 더 보기🔍</button>
   </div>
+
   <div class="screen" id="slide3">
+    <div class="slide-title">볼링장 신발 사이즈 제대로 고르는 법</div>
     <div class="swiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 1.png"></div>
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 2.png"></div>
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 3.png"></div>
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 4.png"></div>
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 5.png"></div>
+        <div class="swiper-slide"><img src="볼링 1.png"></div>
+        <div class="swiper-slide"><img src="볼링 2.png"></div>
+        <div class="swiper-slide"><img src="볼링 3.png"></div>
+        <div class="swiper-slide"><img src="볼링 4.png"></div>
+        <div class="swiper-slide"><img src="볼링 5.png"></div>
       </div>
       <div class="swiper-pagination"></div>
     </div>
     <div class="iframe-container">
-      <iframe src="https://noteforms.com/forms/1-x6enh2" title="의견 남기기"></iframe>
+      <iframe src="https://walla.my/v/QhNsKm3CXx3q2jIjJQGZ" title="설문"></iframe>
     </div>
-    <button class="btn back-btn" onclick="goHome()">← 다른 카드뉴스 보기</button>
+    <button class="btn back-btn" onclick="goHome()">다른 카드 뉴스 더 보기🔍</button>
   </div>
+
   <div class="screen" id="slide4">
+    <div class="slide-title">몸에 좋은 계란을 잘 고르고 잘 사는 방법</div>
     <div class="swiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 1.png"></div>
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 2.png"></div>
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 3.png"></div>
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 4.png"></div>
-        <div class="swiper-slide"><img src="내 삶의 지혜를 나누는 콘텐츠 5.png"></div>
+        <div class="swiper-slide"><img src="계란 1.png"></div>
+        <div class="swiper-slide"><img src="계란 2.png"></div>
+        <div class="swiper-slide"><img src="계란 3.png"></div>
+        <div class="swiper-slide"><img src="계란 4.png"></div>
+        <div class="swiper-slide"><img src="계란 5.png"></div>
       </div>
       <div class="swiper-pagination"></div>
     </div>
     <div class="iframe-container">
-      <iframe src="https://noteforms.com/forms/1-x6enh2" title="의견 남기기"></iframe>
+      <iframe src="https://walla.my/v/zMLjmbWLIj9iUwz2D57N" title="설문"></iframe>
     </div>
-    <button class="btn back-btn" onclick="goHome()">← 다른 카드뉴스 보기</button>
+    <button class="btn back-btn" onclick="goHome()">다른 카드 뉴스 더 보기🔍</button>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
