--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   </div>
 
   <div class="screen" id="slide2">
-    <div class="slide-title">“첫 도전은 혼자였지만, 다음 비행은 당신과 함께하고 싶습니다”</div>
+    <div class="slide-title">“첫 도전은 혼자였지만, 다음 비행은<br>당신과 함께하고 싶습니다”</div>
     <div class="swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide"><img src="비행 1.png"></div>
