--- a/index.html
+++ b/index.html
@@ -21,12 +21,9 @@
       align-items: center;
       justify-content: center;
       padding: 2rem;
-      background-image: url('메인 배경.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      background-color: rgba(255, 255, 255, 0.95);
-      background-blend-mode: lighten;
     }
     .active {
       display: flex;
@@ -34,6 +31,9 @@
     .home {
       height: 100vh;
       justify-content: flex-start;
+      background-image: url('메인 배경.png');
+      background-color: unset;
+      background-blend-mode: normal;
     }
     .overlay {
       background-color: rgba(255, 255, 255, 0.9);
@@ -66,7 +66,7 @@
       margin: 1.5rem 0;
       padding: 1.2rem;
       font-size: 1rem;
-      background-color: #2e7d32;
+      background-color: #f7f7f7;
       border: none;
       border-radius: 8px;
       cursor: pointer;
@@ -74,7 +74,8 @@
       font-family: 'Paperlogy', sans-serif;
       line-height: 1.5;
       white-space: pre-line;
-      color: white;
+      color: #000;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
     .swiper {
       width: 100%;
@@ -111,9 +112,8 @@
     }
     .back-btn {
       margin-top: 1rem;
-      background-color: #1b5e20;
-      font-family: 'Paperlogy', sans-serif;
-      color: white;
+      background-color: #f7f7f7;
+      color: #000;
     }
     .slide-title {
       font-size: 1.4rem;
@@ -159,13 +159,13 @@
       <div class="swiper-pagination"></div>
     </div>
     <div class="iframe-container">
-      <iframe src="https://walla.my/v/c0NRYR2g8x3izjAAZCbr" title="설문"></iframe>
+      <iframe src="https://tally.so/r/npXAo1" title="설문"></iframe>
     </div>
     <button class="btn back-btn" onclick="goHome()">다른 카드 뉴스 더 보기🔍</button>
   </div>
 
   <div class="screen" id="slide2">
-    <div class="slide-title">“첫 도전은 혼자였지만, 다음 비행은<br>당신과 함께하고 싶습니다”</div>
+    <div class="slide-title">“첫 도전은 혼자였지만, 다음 비행은 당신과 함께하고 싶습니다”</div>
     <div class="swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide"><img src="비행 1.png"></div>
@@ -177,7 +177,7 @@
       <div class="swiper-pagination"></div>
     </div>
     <div class="iframe-container">
-      <iframe src="https://walla.my/v/KVsEbmTfbodl0koNX59K" title="설문"></iframe>
+      <iframe src="https://tally.so/r/mKAoxg" title="설문"></iframe>
     </div>
     <button class="btn back-btn" onclick="goHome()">다른 카드 뉴스 더 보기🔍</button>
   </div>
@@ -195,7 +195,7 @@
       <div class="swiper-pagination"></div>
     </div>
     <div class="iframe-container">
-      <iframe src="https://walla.my/v/QhNsKm3CXx3q2jIjJQGZ" title="설문"></iframe>
+      <iframe src="https://tally.so/r/wvVBDg" title="설문"></iframe>
     </div>
     <button class="btn back-btn" onclick="goHome()">다른 카드 뉴스 더 보기🔍</button>
   </div>
@@ -213,7 +213,7 @@
       <div class="swiper-pagination"></div>
     </div>
     <div class="iframe-container">
-      <iframe src="https://walla.my/v/zMLjmbWLIj9iUwz2D57N" title="설문"></iframe>
+      <iframe src="https://tally.so/r/mD91KE" title="설문"></iframe>
     </div>
     <button class="btn back-btn" onclick="goHome()">다른 카드 뉴스 더 보기🔍</button>
   </div>
