--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       position: relative !important;
     }
     .swiper-pagination-bullet-active {
-      background-color: #2e7d32 !important;
+      background-color: #030000 !important;
     }
     .iframe-container {
       width: 100%;
@@ -165,7 +165,7 @@
   </div>
 
   <div class="screen" id="slide2">
-    <div class="slide-title">“첫 도전은 혼자였지만, 다음 비행은 당신과 함께하고 싶습니다”</div>
+    <div class="slide-title">“첫 도전은 혼자였지만, 다음 비행은<br>당신과 함께하고 싶습니다”</div>
     <div class="swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide"><img src="비행 1.png"></div>
@@ -201,7 +201,7 @@
   </div>
 
   <div class="screen" id="slide4">
-    <div class="slide-title">몸에 좋은 계란을 잘 고르고 잘 사는 방법</div>
+    <div class="slide-title">몸에 좋은 계란을<br>잘 고르고 잘 사는 방법</div>
     <div class="swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide"><img src="유정란 1.png"></div>
