--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:title" content="나다움 프로젝트🌳" />
+  <meta property="og:description" content="내 삶의 지혜를 나누는 카드 뉴스" />
+  <meta property="og:image" content="https://hicareer.github.io/fromme/메인%20배경.png" />
+  <meta property="og:type" content="website" />
   <title>나다움 프로젝트🌳</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <style>
